--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -5,25 +5,25 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide rounded-5" data-bs-ride="carousel" style="width: 100%; max-height: 71vh; overflow: hidden;">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/roberto-nickson-q9nZUFC1nTw-unsplash.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/roberto-nickson-q9nZUFC1nTw-unsplash.jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(5).jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(5).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(6).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(6).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(4).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(4).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(3).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(3).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
       <div class="carousel-item">
-        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(2).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(2).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
       </div>
     </div>
   </div>
