--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -27,9 +27,7 @@
       <% if Pet.find(@appointment.pet_id).photo.present? %>
         <%= cl_image_tag Pet.find(@appointment.pet_id).photo.key,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;" %>
       <% else %>
-        <img  src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg"
-              alt="photo_pet_default"
-              style="width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;">
+        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
       <% end %>
       <% if @professional.specialty=="Vétérinaire"%>
         <a href="<%=pet_show_for_pro_path(@appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
