--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,10 +31,9 @@
                   <% if pet.photo.present? %>
                     <%= image_tag pet.photo_url, width: 200, style: "border-radius: 50%; aspect-ratio: 1;", class: "shadow object-fit-cover" %>
                   <% else %>
-                    <img  src="https://res.cloudinary.com/dsbteudoz/image/upload/v1736071797/production/l36dmns98zvw0qbpvjtduy102ebz.jpg"
-                          alt="photo_pet_default"
-                          class="shadow object-fit-cover"
-                          style="border-radius: 50%; aspect-ratio: 1; width: 200px;">
+                    <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default",
+                          class:"shadow object-fit-cover",
+                          style:"border-radius: 50%; aspect-ratio: 1; width: 200px;")%>
                   <% end %>
                 </a>
               <% end %>
@@ -49,7 +48,7 @@
       <% if @appointments.empty? %>
         <div class="text-center">
           <p >Vous n'avez pas de rendez-vous</p>
-          <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/owner-playing-with-pet-dog.png" alt="pas de rdv" style="width: 200px;" >
+          <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/owner-playing-with-pet-dog.png", alt:"pas de rdv", style:"width: 200px;")%>
         </div>
       <% else %>
         <% @appointments.each do |a| %>
