--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,23 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Se connecter", new_session_path(resource_name) %><br />
-<% end %>
+  <div class="d-flex flex-row">
+    <p class="me-2">Vous avez un compte ? </p>
+    <%= link_to "Se connecter", new_session_path(resource_name) %><br />
+  </div>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "S'inscrire", new_registration_path(resource_name) %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Mot de passe oublié?", new_password_path(resource_name) %><br />
 <% end %>
+
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <div class="d-flex flex-row">
+    <p class="me-2">Vous n'avez pas encore de compte ? </p>
+    <%= link_to "S'inscrire", new_registration_path(resource_name) %><br />
+  </div>
+<% end %>
+
+
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Je n'ai pas reçu les instructions de confirmation?", new_confirmation_path(resource_name) %><br />
