--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,11 @@
           </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/uploaded_photos/#{current_user.photo.key}", class: "avatar", alt: "dropdown menu", style: "object-fit: cover"%>
+              <% if current_user.photo.key?%>
+                <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/uploaded_photos/#{current_user.photo.key}", class: "avatar", alt: "dropdown menu", style: "object-fit: cover"%>
+              <% else %>
+                <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/profil-default.jpg", class: "avatar", alt: "dropdown menu", style: "object-fit: cover"%>
+              <% end %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" style="width: fit-content;" aria-labelledby="navbarDropdown">
               <% if !current_user.orders.empty? %>
