add pet alert navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,10 +19,13 @@
             <%= link_to "Adopter", animals_path, class: "nav-link text-white", style:"font-size: 20px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Contact", terms_path, class: "nav-link text-white mx-4", style:"font-size: 20px" %>
+            <%= link_to "Pet Alert", pet_alerts_path, class: "nav-link text-white mx-4", style:"font-size: 20px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "A propos", about_path, class: "nav-link text-white", style:"font-size: 20px" %>
+            <%= link_to "Contact", terms_path, class: "nav-link text-white ", style:"font-size: 20px" %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to "A propos", about_path, class: "nav-link text-white mx-4", style:"font-size: 20px" %>
           </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
