--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -6,75 +6,117 @@
 </div>
 <%# body %>
 <div class="text-center m-4">
-    <h1><%= @professional.name %></h1>
-    <h3><%= @professional.specialty%></h3>
-  </div>
-
-  <div class="grid w-100">
-    <div id="info-pro">
-      <div style="margin: 8px;" class="text-center">
-        <%= image_tag(@professional.photo_url, crop: :fill, class:"rounded-4 mb-2", style:"width: 60%;")%>
-      </div>
-      <div class="d-flex flex-column justify-content-center" style="width: 100%;">
-        <div class="card_pro">
-          <h4>Contact : </h4>
-          <p>Adresse : <%=@professional.address%></p>
-          <p>Numéro de téléphone : 0<%=@professional.phone%></p>
-          <p>Email : <%= @professional.email%></p>
-        </div>
-        <div class="card_pro">
-          <h4>Description : </h4>
-          <p style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%=@professional.description%></p>
-        </div>
-        <div class="card_pro" data-controller="alert">
-          <div class="d-flex flex-row justify-content-between">
-            <h4>Les avis : </h4>
-            <div class="d-flex flex-row align-items-center">
-              <% @professional.rating.times do %>
-                <i class="fas fa-star text-warning m-0"></i>
-              <% end %>
-              <% (5 - @professional.rating).times do %>
-                <i class="fas fa-star text-muted m-0"></i>
-              <% end %>
-              <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+  <h1><%= @professional.name %></h1>
+  <h3><%= @professional.specialty%></h3>
+</div>
+<div class="grid w-100" style="max-width: 100vw;">
+  <div id="info-pro">
+    <div style="margin: 8px;" class="text-center">
+      <%= image_tag(@professional.photo_url, crop: :fill, class:"rounded-4 mb-2", style:"width: 60%;")%>
+    </div>
+    <div class="d-flex flex-column justify-content-center" style="width: 100%;">
+      <div class="card_pro">
+        <div class="row">
+          <div class="col-lg-5 col-md-12 col-sm-8">
+            <div class="text-center">
+              <h4 class="my-2" >Contact : </h4>
             </div>
+            <p>Adresse : <%=@professional.address%></p>
+            <p>Téléphone : 0<%=@professional.phone%></p>
+            <p>Email : <%= @professional.email%></p>
           </div>
-          <%# list of reviews %>
-          <div class="mt-2 d-flex flex-column justify-content-center align-items-center" id="reviews-container">
-            <% if @reviews.empty? %>
-              <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
-                <p class="text-center">Soyez le premier à mettre un avis !</p>
-                <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
-              </div>
-            <% else %>
-              <% @reviews.each do |review| %>
-                <div class="border-bottom mt-2" style="width: 100%;">
-                  <div class="d-flex flex-row justify-content-between">
-                    <p><%= review.user.first_name%> <%= review.user.last_name%></p>
-                    <p><%= review.rating %> / 5</p>
-                  </div>
-                  <p><%= review.content %></p>
+          <div class="col-lg-7 col-md-12 col-sm-8">
+            <div class="text-center">
+              <h4 class="my-2">Horaires : </h4>
+            </div>
+            <% @opening_hours.each do |h| %>
+              <div class="row">
+                <div class="col d-flex flex-column">
+                  <p><%=I18n.t('date.abbr_day_names', locale: :fr)[h.day_of_week]%></p>
                 </div>
-              <% end %>
+                <div class="col d-flex flex-column">
+                  <% if h.closed?%>
+                    <p>Fermé</p>
+                  <% else %>
+                    <p><%=h.open_time_morning.strftime('%H:%M')%> - <%=h.close_time_morning.strftime('%H:%M')%></p>
+                  <% end %>
+                </div>
+                <div class="col d-flex flex-column">
+                  <% if h.closed?%>
+                    <p>Fermé</p>
+                  <% else %>
+                    <p><%=h.open_time_afternoon.strftime('%H:%M')%> - <%=h.close_time_afternoon.strftime('%H:%M')%></p>
+                  <% end %>
+                </div>
+              </div>
             <% end %>
           </div>
-          <div class="d-flex justify-content-center mt-3">
-            <% if user_signed_in? %>
-              <%= link_to "Ajouter un avis",
+        </div>
+      </div>
+      <%# description %>
+      <div class="card_pro">
+        <h4 class="my-2">Description : </h4>
+        <p style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%=@professional.description%></p>
+      </div>
+      <div id="available-pro" class="card_pro">
+        <%= render "all_available_slots", professional: @professional%>
+      </div>
+    </div>
+  </div>
+  <div>
+    <%# map %>
+    <div class="map" style="height: 400px;  border-radius: 20px"
+          data-controller="map"
+          data-map-markers-value="<%= @marker.to_json %>"
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+    <%# avis %>
+    <div class="card_pro" data-controller="alert">
+      <div class="d-flex flex-row justify-content-between">
+        <h4>Les avis : </h4>
+        <div class="d-flex flex-row align-items-center">
+          <% @professional.rating.times do %>
+            <i class="fas fa-star text-warning m-0"></i>
+          <% end %>
+          <% (5 - @professional.rating).times do %>
+            <i class="fas fa-star text-muted m-0"></i>
+          <% end %>
+          <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+        </div>
+      </div>
+      <%# list of reviews %>
+      <div class="mt-2 d-flex flex-column justify-content-center align-items-center" id="reviews-container">
+        <% if @reviews.empty? %>
+          <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+            <p class="text-center">Soyez le premier à mettre un avis !</p>
+            <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/customer-feedback.png"
+                style="height: 100px">
+          </div>
+        <% else %>
+          <% @reviews.each do |review| %>
+            <div class="border-bottom mt-2" style="width: 100%;">
+              <div class="d-flex flex-row justify-content-between">
+                <p><%= review.user.first_name%> <%= review.user.last_name%></p>
+                <p><%= review.rating %> / 5</p>
+              </div>
+              <p><%= review.content %></p>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+      <div class="d-flex justify-content-center mt-3">
+        <% if user_signed_in? %>
+          <%= link_to "Ajouter un avis",
                           "#",
                           class: "btn_custom mt-3 active text-center",
                           data: { controller: "alert", action: "click->alert#reviewSweetalert", professional_id: @professional.id } %>
-            <% else %>
-              <%= link_to "Ajouter un avis",
+        <% else %>
+          <%= link_to "Ajouter un avis",
                           new_user_session_path,
                           class: "btn_custom mt-3",
                           data: { controller: "alert", action: "click->alert#notConnectedSweetalert"}%>
-            <% end %>
-          </div>
-        </div>
+        <% end %>
       </div>
     </div>
-    <div id="available-pro", style="position: sticky; top: 100px;">
-      <%= render "all_available_slots", professional: @professional%>
-    </div>
   </div>
+</div>
